--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/mstmvd/ngm-base.git"
   },
+  "keywords": ["ngm", "base", "core", "angular", "responsive", "flex"],
+  "author": "Mostafa Movahedi",
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^6.1.4",
     "@angular/core": "^6.1.4",
