--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngm-base",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/mstmvd/ngm-base.git"
@@ -9,12 +9,15 @@
   "author": "Mostafa Movahedi",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/cdk": "^6.4.0",
+    "@angular/common": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/cdk": "^7.0.1",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/material": "^7.0.1",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "ng-http-loader": "^2.3.0",
-    "rxjs": "^6.2.2"
+    "rxjs": "^6.3.3",
+    "json2typescript": "^1.0.6"
   }
 }
