--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngm-base",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/mstmvd/ngm-base.git"
@@ -18,6 +18,9 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "ng-http-loader": "^3.2.0",
     "rxjs": "^6.3.3",
-    "json2typescript": "^1.0.6"
+    "json2typescript": "^1.0.6",
+    "angular2-toaster": "^6.1.0",
+    "moment": "^2.22.2",
+    "jalali-moment": "^3.2.3"
   }
 }
