--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngm-base",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/mstmvd/ngm-base.git"
@@ -21,6 +21,6 @@
     "json2typescript": "^1.0.6",
     "angular2-toaster": "^6.1.0",
     "moment": "^2.22.2",
-    "jalali-moment": "^3.2.3"
+    "moment-jalaali": "0.8.1"
   }
 }
