--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ngm-base",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/mstmvd/ngm-base.git"
   },
-  "keywords": ["ngm", "base", "core", "angular", "responsive", "flex"],
+  "keywords": ["ngm", "base", "core", "angular", "responsive", "flex", "material"],
   "author": "Mostafa Movahedi",
   "license": "MIT",
   "peerDependencies": {
@@ -21,7 +21,6 @@
     "json2typescript": "^1.0.6",
     "angular2-toaster": "^6.1.0",
     "moment": "^2.22.2",
-    "moment-jalaali": "0.8.1",
-    "jalali-moment": "^3.2.3"
+    "moment-jalaali": "0.8.1"
   }
 }
