--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.7",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mstmvd/ngm-base.git"
+    "url": "https://github.com/ngx-tools/base"
   },
   "keywords": ["ngm", "base", "core", "angular", "responsive", "flex", "material"],
   "author": "Mostafa Movahedi",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/core": ">=7.0.0",
     "@angular/cdk": "=>7.0.0",
